--- a/app/src/main/res/layout/content_detail_course.xml
+++ b/app/src/main/res/layout/content_detail_course.xml
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_list_module"
         tools:listitem="@layout/items_module_list" />
 
-    <com.google.android.material.progressindicator.CircularProgressIndicator
+    <ProgressBar
         android:id="@+id/progress_bar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
